; ModuleID = '/home/carl/AnghaBench/linux/drivers/pci/controller/extr_pcie-altera.c_altera_pcie_link_up.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pci/controller/extr_pcie-altera.c_altera_pcie_link_up.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.altera_pcie = type { i32 }

@RP_LTSSM = common dso_local global i32 0, align 4
@RP_LTSSM_MASK = common dso_local global i32 0, align 4
@LTSSM_L0 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.altera_pcie*)* @altera_pcie_link_up to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @altera_pcie_link_up(%struct.altera_pcie* %0) #0 {
  %2 = alloca %struct.altera_pcie*, align 8
  store %struct.altera_pcie* %0, %struct.altera_pcie** %2, align 8
  %3 = load %struct.altera_pcie*, %struct.altera_pcie** %2, align 8
  %4 = load i32, i32* @RP_LTSSM, align 4
  %5 = call i32 @cra_readl(%struct.altera_pcie* %3, i32 %4)
  %6 = load i32, i32* @RP_LTSSM_MASK, align 4
  %7 = and i32 %5, %6
  %8 = load i32, i32* @LTSSM_L0, align 4
  %9 = icmp eq i32 %7, %8
  %10 = xor i1 %9, true
  %11 = xor i1 %10, true
  %12 = zext i1 %11 to i32
  ret i32 %12
}

declare dso_local i32 @cra_readl(%struct.altera_pcie*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
